cargo_check_verify_4.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-cache v0.1.0 (/app/crates/auth-cache)
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
warning: unused import: `StatusCode`
 --> crates/auth-api/src/handlers/oidc_provider.rs:5:12
  |
5 |     http::{StatusCode, HeaderMap},
  |            ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> crates/auth-api/src/handlers/oidc_provider.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^

error[E0382]: use of moved value: `context.current_state`
   --> crates/auth-api/src/handlers/auth_flow.rs:149:26
    |
148 |         state: context.current_state,
    |                --------------------- value moved here
149 |         next_step: match context.current_state {
    |                          ^^^^^^^^^^^^^^^^^^^^^ value used here after move
    |
    = note: move occurs because `context.current_state` has type `AuthFlowState`, which does not implement the `Copy` trait

error[E0382]: borrow of partially moved value: `user`
   --> crates/auth-api/src/handlers/auth_flow.rs:296:84
    |
289 | ...   let secret = user.mfa_secret.ok_or(ApiError::new(AuthError::ValidationError { message: "MFA not configured for user".to_string() }))?;
    |                    --------------- value partially moved here
...
296 | ...        let token_response = state.identity_service.issue_tokens_for_user(&user, context.tenant_id, context.client_id.clone(), None).a...
    |                                                                              ^^^^^ value borrowed here after partial move
    |
    = note: partial move occurs because `user.mfa_secret` has type `std::option::Option<std::string::String>`, which does not implement the `Copy` trait

warning: unused import: `auth_cache::Cache`
  --> crates/auth-api/src/handlers/oidc_provider.rs:12:5
   |
12 | use auth_cache::Cache;
   |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> crates/auth-api/src/handlers/oidc_provider.rs:126:19
    |
126 |         .map_err(|e| ApiError::new(AuthError::InternalError))?; // Log error in real app
    |                   ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `auth-api` (lib) generated 5 warnings
error: could not compile `auth-api` (lib) due to 2 previous errors; 5 warnings emitted
